<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/todoInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_task"
                android:inputType="text" />

            <CheckBox
                android:id="@+id/importantCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/todoInput"
                android:text="@string/important_task" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/importantCheckBox"
                tools:text="Date Created : 21 dec 2000" />


        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="30dp"
            android:src="@drawable/ic_baseline_check_24"
            android:contentDescription="@string/add_item" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>